@@ -16,7 +16,7 @@ Localization
     #LOC_NFEX_ModuleAntennaFeed_Event_ShowPath_Title = Render Antenna Path
 
     #LOC_NFEX_ModuleDeployableReflector_ModuleName = Deployable Reflector
-    #LOC_NFEX_ModuleDeployableReflector_PartInfo = Increases the range of Antenna Feeds pointing at the dish \n\n <b>Added Range</b>: <<1>> m
+    #LOC_NFEX_ModuleDeployableReflector_PartInfo = Increases the power of Antenna Feeds pointing at the dish \n\n <b>Added Power</b>: <<1>>
 
     #LOC_NFEX_ModuleDeployableReflector_Action_Extend = Extend Reflector
     #LOC_NFEX_ModuleDeployableReflector_Action_Retract = Retract Reflector
@@ -394,7 +394,7 @@ Localization
     #LOC_NFEX_nfex-antenna-reflector-huge-1_tags = nearfuture aerial antenna deploy dish extend fold radio signal transmi terrestar reflector
 
     #LOC_NFEX_nfex-antenna-reflector-giant-1_title = RFL-2000 Dish Reflector Array
-    #LOC_NFEX_nfex-antenna-reflector-giant-1_description = An advanced dish reflector made up of fourteen individual array modules. Useless without a feeer antenna.
+    #LOC_NFEX_nfex-antenna-reflector-giant-1_description = An advanced dish reflector made up of fourteen individual array modules. Useless without a feeder antenna.
     #LOC_NFEX_nfex-antenna-reflector-giant-1_tags = nearfuture aerial antenna deploy dish extend fold radio signal transmi ets vii kiku8 reflector
 
 
